objects/Show__c.object
<CustomObject>
    <description>Past and upcoming shows for the band</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date and time when the show will happen</description>
        <inlineHelpText>Date and time when the show will happen</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Length_Hours__c</fullName>
        <description>Show length hours portion</description>
        <inlineHelpText>Show length hours portion</inlineHelpText>
        <label>Length Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_Minutes__c</fullName>
        <description>Show length minutes portion</description>
        <inlineHelpText>Show length minutes portion</inlineHelpText>
        <label>Length Minutes</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location for the show</description>
        <inlineHelpText>Location for the show</inlineHelpText>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Show</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Show Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>